--- a/Duckhunt/style/style.css
+++ b/Duckhunt/style/style.css
@@ -1,24 +1,18 @@
 body{
     margin: 0 auto;
-    padding: 0;
     overflow-y: hidden;
 }
 
-.container{
-    width: 100%;
-    height: 100%;
-}
-
-img:nth-of-type(1){
+.DuckHunt{
     position: relative;
-    width: 100%;
-    height: 1000px;
+    top: 100px;
+    left: 200px;
 }
 
-img:nth-of-type(2){
+.duck{
     position: absolute;
-    top: 200px;
-    left: 500px;
-    width: 150px;
-    height: 150px;
+    top: 0;
+    left: 100px;
 }
+
+
