Bezig met het stylen met de stage en de duck

--- a/Duckhunt/style/style.css
+++ b/Duckhunt/style/style.css
@@ -9,10 +9,14 @@ body{
     left: 200px;
 }
 
-.duck{
+#duck{
     position: absolute;
-    top: 0;
-    left: 100px;
+    top: 100px;
+    left: 550px;
+}
+
+#duck > img{
+    width: 150px;
 }
 
 
