--- a/Duckhunt/style/style.css
+++ b/Duckhunt/style/style.css
@@ -3,20 +3,30 @@ body{
     overflow-y: hidden;
 }
 
-.DuckHunt{
+.container{
     position: relative;
-    top: 100px;
-    left: 200px;
+    width: 1280px;
+    height: 769px;
 }
 
-#duck{
+#duckGif{
     position: absolute;
-    top: 100px;
-    left: 550px;
+    top: 200px;
+    left: 500px;
+    border: none;
+    background-color: transparent;
 }
 
-#duck > img{
-    width: 150px;
+#duckGif{
+    width: 200px;
+    height: 150px;
 }
 
+#duckGif:hover{
+    cursor: pointer;
+}
+
+#stageBG:hover{
+    cursor: pointer;
+}
 
