--- a/Duckhunt/style/style.css
+++ b/Duckhunt/style/style.css
@@ -9,17 +9,20 @@ body{
     height: 769px;
 }
 
-#duckGif{
-    position: absolute;
-    top: 200px;
-    left: 500px;
-    border: none;
-    background-color: transparent;
+#stageBG{
+    position: relative;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
 #duckGif{
+    position: absolute;
+    top: 250px;
+    left: 500px;
     width: 200px;
-    height: 150px;
+    height: 120px;
 }
 
 #duckGif:hover{
